# betterme.study

./: .gitignore  Dockerfile  all_env.py  docker-compose.yml  main.py  note.txt  package.json  pyproject.toml  readme.md  requirements.txt  run.sh
.upm/: store.json
app/: __init__.py  import_example.txt  landing_page.py
app/authentication/: auth.py
app/landing_page/: home.py
app/other_modules/: __init__.py  betterme_cert.py
app/others/: __init__.py  comingsoon.py  privacy_policy.py
app/study_tools/: __init__.py  pomodoro.py  todolist.py
apps/authentication/: __init__.py  discord_oauth.py  jwt_auth.py
apps/landing_page/: home.py
apps/others/: __init__.py  privacy_policy.py
apps/study_tools/: __init__.py  pomodoro.py  quotes.py  todolist.py
authentication/: __init__.py  auth.py  discord_oauth.py  facebook_oauth.py  google_oauth.py  jwt_auth.py
authentication/schemas/: user.py
base/: __init__.py  exception_handle.py  exeption_handle.py  routers.py  settings.py
client/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
client/src/: config.ts
database/mongodb/: __init__.py  todolist.py  todolist_pomodoro.py  user.py
nginx/: nginx.conf
other_modules/: image_handle_modules.py  time_modules.py
server/: Dockerfile  docker-compose.yml  readme.md  run.sh
server/authentication/: auth.py  jwt_auth.py
server/base/: event_handler.py  routers.py  settings.py
server/models/: users.py
server/other_modules/: json_modules.py
templates/authentication/: login.html
templates/landing_page/: home.html
templates/others/: comingsoon.html  (+2 more)
(+27 files in other folders)
