[tool.poetry]
name = "repl_nix_bettermestudy"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jwt = "^1.3.1"
passlib = "^1.7.4"
pydantic = "^1.10.2"
pymongo = "^4.2.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
